tests/sqlcmd/baselines/errors/load_classes3.errbaseline
SQL error while compiling query: SQL Syntax error in "LOAD sqlcmdtest-procs.jar" unexpected token: LOAD
